--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,3 @@
 <resources>
-    <string name="app_name">SignIn</string>
-    <string name="web_client_id">891537265523-u6vo6j6hc96dbnb66acpc3jrs4t15du5.apps.googleusercontent.com</string>
+    <string name="app_name">Splash Screen</string>
 </resources>
