--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
-    <string name="app_name">Derive Capital</string>
+    <string name="app_name">Splash Screen</string>
 
 
-    // sign up activity
+                              // sign up activity
     <string name="Lets_get_you_signed_up">Lets get you signed up</string>
     <string name="country_code">+91</string>
     <string name="mobile_no">Mobile No</string>
@@ -18,11 +18,13 @@
     <string name="sign_in">Sign In</string>
 
 
-    // Otp verification activity
+                                  // Otp verification activity
     <string name="otp_verification">OTP VERIFICATION</string>
     <string name="enter_the_code">Enter the code send to</string>
     <string name="number">1234567890</string>
     <string name="did_not_receive_code">Didn\'t receive the OTP?</string>
     <string name="resend_otp">Resend Otp</string>
     <string name="verify">Verify</string>
+
+
 </resources>
