--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,6 +53,11 @@
     <string name="fb_login_protocol_scheme">fb1363845314015894</string>
 
 
+
+    //twitter
+    <string name="Api_key">k3G1JrGxcNut5XVQ6A9OfcpoK</string>
+    <string name="Api_Secret">oMIJGpt1FzRnh70M8Txc6kLAdZrRs9EoSqeQjoVWZ5PpDWDoPm</string>
+
     //dash board activity
     <string name="good_morning">Good Morning,</string>
     <string name="name">Vaishnavi</string>
