--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,7 +72,7 @@
     <string name="glad_to">Glad to have you onboard the Starship rocket</string>
     <string name="pay">Pay</string>
 
-    <string name="we_are_on">We are one a journey to start, manage and clean up your personal finance. It is slightly a long ride, but we promise you will love every step of it.</string>
+    <string name="we_are_on">We are one a journey to start, manage and clean up your personal finance.</string>
 
     // payment activity
     <string name="payments">Payments</string>
@@ -84,5 +84,8 @@
     <string name="add_payment_method">Add Payment Method</string>
     <string name="help">Help</string>
     <string name="new_payment">New Payment</string>
+
+    //user detail
+    <string name="great">Great, now help us know you more</string>
     
 </resources>
