--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,5 +84,6 @@
     <string name="add_payment_method">Add Payment Method</string>
     <string name="help">Help</string>
     <string name="new_payment">New Payment</string>
-    
+    <string name="isLoggedIn">isLoggedIn</string>
+
 </resources>
