resolved front end errors --ayush

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,6 +108,7 @@
     <string name="proceed">Proceed</string>
     <string name="change_number">Change number</string>
     <string name="resend_code">resend code</string>
+    <string name="nameUser">Name</string>
 
 
     <string-array name="Values">
