--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -110,11 +110,12 @@
     <string name="resend_code">resend code</string>
     <string name="nameUser">Name</string>
 
-
     <string-array name="Values">
 
         <item>High</item>
         <item>medium</item>
         <item>low</item>
     </string-array>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
